# face-recognizer-eigenfaces

./: CMakeLists.txt  README.md  main.cpp  photos.csv
